-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b10
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229911 | 11.0.5 | Thomas Stuefe | P4 | Resolved | Fixed | team |
On AIX, we roll our own variant of SafepointMechanism::pd_initialize(). We missed registering the polling page with NMT, which caused runtime/NMT/SafepointPollingPages to fail on AIX.
Note that this is only observable if UseSIGTRAP is off (on by default), since on ppc, we skip polling page creation if we use SIGTRAP instead of the standard SIGSEGV based safepoint mechanism.
Note that this is only observable if UseSIGTRAP is off (on by default), since on ppc, we skip polling page creation if we use SIGTRAP instead of the standard SIGSEGV based safepoint mechanism.
- backported by
-
JDK-8229911 [aix] NMT does not show "Safepoint" memory type
-
- Resolved
-
- relates to
-
JDK-8191212 AIX: Build and polling page allocation broken after 8189941
-
- Resolved
-
-
JDK-8208499 NMT: Missing memory tag for Safepoint polling page
-
- Resolved
-