8210314: [aix] NMT does not show "Safepoint" memory type

Reviewed-by: goetz, mbaesken